# PillowLock

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.ko.md  README.md  SECURITY.md  build.rs
.github/workflows/: release.yml
packaging/: PillowLock.Bundle.wxs  PillowLock.wxs
scripts/: build-windows.ps1  bump-version.ps1
src/: lib.rs  main.rs
ui/: app.slint
