[package]
name = "pillowlock"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "PillowLock desktop file vault with bilingual English/Korean UI"
publish = false

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
arboard = "3"
hkdf = "0.12"
rand = "0.8"
rfd = "0.14"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
slint = { version = "1.15", features = ["unstable-winit-030"] }
tempfile = "3"
thiserror = "1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
zeroize = "1"

[build-dependencies]
embed-resource = "3"
slint-build = "1.15"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
panic = "abort"
